# defmt-stdout

./: Cargo.toml  README.md  runner.sh
.cargo/: config.toml
src/: lib.rs  main.rs
