[package]
name = "defmt-stdout"
version = "0.1.1"
edition = "2024"
description = "Transmit defmt log messages to the standard output (Linux only)"
readme = "README.md"
repository = "https://github.com/SakiiCode/defmt-stdout"
license = "MIT"
keywords = ["defmt", "simulator", "stdout"]
categories = ["command-line-interface", "embedded", "simulation"]

[lib]
path = "src/lib.rs"

[dependencies]
defmt = "1.0.1"
